src/objects/Chatter_QuickAction_Admins__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Assigned_to_Request_Assignment_Removal__c</fullName>
        <label>Assigned to Request Assignment Removal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIO_ADMIN__c</fullName>
        <description>User is Bio Admin</description>
        <inlineHelpText>User is Bio Admin</inlineHelpText>
        <label>BIO ADMIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_In_PG_Chatter_User__c</fullName>
        <label>Interest In PG Chatter User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCD_Admin__c</fullName>
        <description>User is MCD Admin</description>
        <inlineHelpText>User is MCD Admin</inlineHelpText>
        <label>MCD Admin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOD_Admin__c</fullName>
        <description>User is OOD Admin</description>
        <inlineHelpText>User is OOD Admin</inlineHelpText>
        <label>OOD Admin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Research_Rating_Chatter_Group__c</fullName>
        <label>Request Research Rating Chatter Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Research_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Research Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Intrest_Chatter_Group__c</fullName>
        <label>Volunteer Intrest Chatter Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Chatter/QuickAction Admins</label>
</CustomObject>